--- a/РГЗ/index.html
+++ b/РГЗ/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>Калькулятор</h1>
-<p><h1>Горбенко Леонида </h1></p>
+<p><h1>Горбенко Леонида,КИТ-64 </h1></p>
 <form name="calc" id="calculator">
 	<table>
 	<tr>
